// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Image component should render correctly with default props 1`] = `
<Image
  onLayout={undefined}
  onLoad={[Function]}
  onLoadEnd={[Function]}
  resizeMode="cover"
  source={Object {}}
  style={
    Array [
      Object {},
    ]
  }
/>
`;

exports[`Image component should render correctly with height width props 1`] = `
<Image
  onLayout={undefined}
  onLoad={[Function]}
  onLoadEnd={[Function]}
  resizeMode="cover"
  source={Object {}}
  style={
    Array [
      Object {},
      Object {
        "height": 200,
        "width": 200,
      },
    ]
  }
/>
`;

exports[`Image component should render correctly with onPress prop 1`] = `
<Image
  accessibilityComponentType={undefined}
  accessibilityLabel={undefined}
  accessibilityTraits={undefined}
  accessible={true}
  hitSlop={undefined}
  nativeID={undefined}
  onLayout={undefined}
  onLoad={[Function]}
  onLoadEnd={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  resizeMode="cover"
  source={Object {}}
  style={
    Array [
      Object {},
    ]
  }
  testID={undefined}
/>
`;

exports[`Image component should render correctly with width, resourceWidth, and resourceHeight props 1`] = `
<Image
  onLayout={undefined}
  onLoad={[Function]}
  onLoadEnd={[Function]}
  resizeMode="cover"
  source={Object {}}
  style={
    Array [
      Object {},
      Object {
        "height": 200,
        "width": 200,
      },
    ]
  }
/>
`;
